kubernetes/apps/windmill/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: windmill
  labels:
    toolkit.fluxcd.io/tenant: dev-team
